# vertice

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  core.cpp  core.h  esp.h  example.h  hooks.cpp  hooks.h  vertice.h
